--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.1.9",
     "angular-mat-datepicker": "0.0.2",
     "bootstrap": "^4.6.0",
+    "location": "0.0.1",
     "moment": "^2.29.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
