--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "angular-mat-datepicker": "0.0.2",
+    "angular2-text-mask": "^9.0.0",
     "bootstrap": "^4.6.0",
     "location": "0.0.1",
     "moment": "^2.29.1",
