--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "angular-bootstrap-md": "^11.0.0",
     "angular-mat-datepicker": "0.0.2",
     "angular2-text-mask": "^9.0.0",
     "bootstrap": "^4.6.0",
