--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap-select": "^1.13.18",
     "location": "0.0.1",
     "moment": "^2.29.1",
+    "ngx-mat-select-search": "^3.2.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
